<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="ltr"
    android:orientation="vertical"
    tools:context=".ui.fragments.language.LanguageFragment">

    <RelativeLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@color/toolBarColor"
        android:elevation="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/ivBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:contentDescription="@string/app_name"
            android:padding="10dp"
            android:src="@drawable/arrow_back" />

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="20dp"
            android:layout_toStartOf="@+id/btnApply"
            android:layout_toEndOf="@+id/ivBack"
            android:ellipsize="end"
            android:gravity="left"
            android:maxLines="1"
            android:text="@string/select_language"
            android:textColor="@color/textColor"
            android:textSize="@dimen/_14ssp"
            android:textStyle="bold"
            android:theme="@style/textRegular"
            app:layout_goneMarginStart="17dp" />

        <TextView
            android:id="@+id/btnApply"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="10dp"
            android:contentDescription="@string/app_name"
            android:padding="10dp"
            android:text="@string/done"
            android:textColor="@color/primaryColor"
            android:textSize="@dimen/_14ssp"
            android:theme="@style/textRegular" />

    </RelativeLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/native_container"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraint"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_above="@id/native_container">

            <TextView
                android:id="@+id/tvDefaultLang"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="20dp"
                android:ellipsize="end"
                android:gravity="start"
                android:maxLines="1"
                android:text="@string/selected"
                android:textColor="@color/textColor"
                android:textSize="@dimen/_12ssp"
                android:textStyle="bold"
                android:theme="@style/textRegular"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvLanguage"
                android:layout_width="0dp"
                android:layout_height="@dimen/_30sdp"
                android:layout_marginHorizontal="@dimen/_5sdp"
                android:layout_marginTop="20dp"
                android:gravity="center_vertical"
                android:text="@string/english"
                android:textColor="@color/textColor"
                android:textSize="@dimen/_11ssp"
                android:theme="@style/textRegular"
                app:layout_constraintEnd_toStartOf="@+id/selectedImage"
                app:layout_constraintStart_toStartOf="@+id/tvDefaultLang"
                app:layout_constraintTop_toBottomOf="@+id/tvDefaultLang" />

            <ImageView
                android:id="@+id/selectedImage"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_centerVertical="true"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_select"
                app:layout_constraintBottom_toBottomOf="@+id/tvLanguage"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tvLanguage" />

            <TextView
                android:id="@+id/tvAllLang"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:ellipsize="end"
                android:gravity="start"
                android:maxLines="1"
                android:text="@string/all_languages"
                android:textColor="@color/textColor"
                android:textSize="@dimen/_12ssp"
                android:textStyle="bold"
                android:theme="@style/textRegular"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/tvDefaultLang"
                app:layout_constraintTop_toBottomOf="@+id/tvLanguage" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="5dp"
                android:layout_marginTop="5dp"
                android:nestedScrollingEnabled="false"
                android:overScrollMode="never"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginBottom="5dp"
                app:layout_constraintTop_toBottomOf="@+id/tvAllLang"
                tools:listitem="@layout/item_language" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/native_container"
        android:layout_width="match_parent"
        android:layout_height="210dp"
        android:layout_alignParentBottom="true"
        android:layout_marginHorizontal="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/round_bg_10"
        android:backgroundTint="@color/backGroundColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/loading_ad"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:background="@drawable/round_bg_10"
            android:backgroundTint="@color/originalNativeColor"
            android:gravity="center"
            android:text="@string/loading_ad"
            android:textColor="@color/textColor"
            android:textSize="@dimen/_11ssp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <FrameLayout
            android:id="@+id/admob_container"
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>